--- a/hi-techCore/styles/css/downloadFonts.css
+++ b/hi-techCore/styles/css/downloadFonts.css
@@ -1,8 +1,7 @@
-
-/* 
-──────────────────────────────────────────────────────
-downloadFonts.css
-────────────────────────────────────────────────────── */
+/*
+┌──────────────────────────────────────────────────────┐
+│                                               downloadFonts.css                                                 │
+└──────────────────────────────────────────────────────◈ */
 
 /* 
 Os códigos abaixo devem ficar  no início do CSS, antes de qualquer CSS,
