--- a/hi-techCore/styles/css/fw_identity.css
+++ b/hi-techCore/styles/css/fw_identity.css
@@ -1,28 +1,28 @@
 @charset "UTF-8";
+/*
+┌──────────────────────────────────────────────────────┐
+│                                                    fw_identity.css                                                    │
+└──────────────────────────────────────────────────────◈ */
 /*  
-──────────────────────────────────────────────────────
-gmes-identity.css
-────────────────────────────────────────────────────── */
-/* 
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Variables
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 /*
 (Colocar as variáveis de 'default.scss' do framework 
 aqui quando for usar este arquivo em um projeto.)
 */
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Classes JS
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 /* 
 (Colocar as classes genéricas aplicadas somente via JS de 'default.scss' 
 do framework aqui quando for usar este arquivo em um projeto.)
 */
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Switches & Buttons Examples
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .width_100_percent {
   width: 100% !important;
 }
@@ -85,9 +85,9 @@ TODO: Switches & Buttons Examples
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Switches, <button>'s, <a>'s Change Color
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .switches_change_color li {
   display: inline-block;
   cursor: pointer;
@@ -99,9 +99,9 @@ TODO: Switches, <button>'s, <a>'s Change Color
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Choice Examples
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .choice_example_1 > :not(:nth-child(1)), .choice_example_2 > :not(:nth-child(1)), .choice_example_3 > :not(:nth-child(1)) {
   display: none;
 }
@@ -111,9 +111,9 @@ TODO: Choice Examples
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Syntaxes
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 sc1 {
   color: red;
 }
@@ -131,9 +131,9 @@ sc4 {
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Display
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .display {
   display: inline-block;
   border: 6px ridge #d4d4d4;
