--- a/hi-techCore/styles/css/gmes_normalize.css
+++ b/hi-techCore/styles/css/gmes_normalize.css
@@ -1,8 +1,8 @@
 /* gmes_normalize.css */
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 Spaces
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 * { /* <- Talvez prejudique a performance. */
   margin: 0;
@@ -47,9 +47,9 @@ ul, ol {
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 Medias
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 img, video {
   width: auto;
@@ -58,7 +58,7 @@ img, video {
 /*
 ──────────────────────────────────────────────────────
 Forms
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 button, input, select, textarea { 
   font-family : inherit; 
