--- a/hi-techCore/styles/scss/fw_identity.scss
+++ b/hi-techCore/styles/scss/fw_identity.scss
@@ -1,12 +1,12 @@
-/*  
-──────────────────────────────────────────────────────
-gmes-identity.css
-────────────────────────────────────────────────────── */
+/*
+┌──────────────────────────────────────────────────────┐
+│                                                    fw_identity.css                                                    │
+└──────────────────────────────────────────────────────◈ */
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Variables
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 /*
 (Colocar as variáveis de 'default.scss' do framework 
@@ -14,9 +14,9 @@ aqui quando for usar este arquivo em um projeto.)
 */ 
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Classes JS
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 // Classes Genéricas Pra Serem Aplicadas Somente Via JS:
 
@@ -26,9 +26,9 @@ do framework aqui quando for usar este arquivo em um projeto.)
 */
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Switches & Buttons Examples
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 // Switches Style
 
@@ -94,9 +94,9 @@ TODO: Switches & Buttons Examples
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Switches, <button>'s, <a>'s Change Color
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 .switches_change_color {
 
@@ -115,9 +115,9 @@ TODO: Switches, <button>'s, <a>'s Change Color
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Choice Examples
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 $font_size: 19rem; 
 
@@ -134,9 +134,9 @@ $font_size: 19rem;
 }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Syntaxes
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 sc1 { color: red; }
 sc2 { color: blue; }
@@ -144,9 +144,9 @@ sc3 { color: green; }
 sc4 { color: purple; }
 
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Display
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 
 .display {
     display: inline-block; 
