--- a/hi-techCore/styles/css/identity.css
+++ b/hi-techCore/styles/css/identity.css
@@ -1,18 +1,18 @@
 @charset "UTF-8";
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 gmes-identity.css  
-────────────────────────────────────────────────────── */
-/* 
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈ */
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Variables
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 /* Padrão: 600-700px. */
 /* Apple: 16px em 320w, e 22px em 736w. */
 /*  
-──────────────────────────────────────────────────────
+◈──────────────────────────────────────────────────────◈
 TODO: Framework - Classes JS
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .display_none {
   display: none;
 }
@@ -21,10 +21,10 @@ TODO: Framework - Classes JS
   overflow: hidden;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Seções De Layout
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .header-content {
   max-width: 850px;
 }
@@ -71,10 +71,10 @@ TODO: Seções De Layout
   }
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Others
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 table th {
   /*
         background: url(../../framework/images/colors/text_table_th.png)  center /100% 100%;
@@ -89,10 +89,10 @@ table th {
   padding: 8px 0px 0px 7px;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Slider
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .slider img, .slider picture {
   max-width: 94.4%;
 }
@@ -115,7 +115,7 @@ TODO: Slider
 /* 
 ────────────────────────────────────────────────────── 
 TODO: Download Page
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 .download_buttons {
   display: flex;
   justify-content: space-evenly;
@@ -138,10 +138,10 @@ TODO: Download Page
   width: 180px;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Types Table
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 @media (pointer: fine) and (min-width: 501px) and (min-height: 501px) {
   .types_table_msg {
     display: none !important;
@@ -266,10 +266,10 @@ TODO: Types Table
 }
 
 */
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: Skills - Table
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
 @media (min-width: 1920px) {
   .FULLHD_STC_conteiner {
     position: fixed;
@@ -564,7 +564,7 @@ TODO: Skills - Table
   text-align: center;
 }
 
-/* 
-──────────────────────────────────────────────────────
+/*  
+◈──────────────────────────────────────────────────────◈
 TODO: ...
-────────────────────────────────────────────────────── */
+◈──────────────────────────────────────────────────────◈ */
